--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-form": "^8.3.1",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "axios-typescript-response": "^1.0.4",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
