--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/redux-form": "^8.3.1",
+    "@types/reselect": "^2.2.0",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "axios-typescript-response": "^1.0.4",
@@ -24,6 +25,7 @@
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
